.k8s/dev/scanme-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: scanme-backend
  namespace: scanme-dev
spec:
  selector:
    app: scanme-backend
  ports:
    - name: scanme-backend-http
      protocol: TCP
      port: 80
      targetPort: 8080
